# cryptotax-django

./: .gitignore  conftest.py  pyproject.toml  pytest.ini
cryptotax/: db.sqlite3  dune_faggotry.py  google-client-id.txt  google-client-secret.txt
cryptotax/cryptotax/: asgi.py  settings.py  urls.py  wsgi.py
cryptotax/media/reports/1/7a2cc6aa-d3a2-45c1-a2a7-3fcfadef1f25/: defi_trades.csv
cryptotax/static/css/: app.css
cryptotax/static/js/: solana-payment.bundle.js
cryptotax/templates/: base.html  home.html
cryptotax/templates/account/: login.html  logout.html  signup.html
cryptotax/templates/includes/: messages.html  navbar.html
cryptotax/templates/socialaccount/: login.html  signup.html
cryptotax/wallet_analysis/: admin.py  dune_analysis.py  factories.py  models.py  payment_wrapper.py  solana_utils.py  tasks.py  tests.py  urls.py  views.py
cryptotax/wallet_analysis/management/commands/: create_test_payment.py
cryptotax/wallet_analysis/migrations/: 0001_initial.py  0002_alter_solanapayment_reference.py  0003_analysisrun_queryexecution_and_more.py  0004_alter_dunequeryjob_unique_together_and_more.py  0005_x402query.py  0006_x402query_result.py
cryptotax/wallet_analysis/templates/admin/wallet_analysis/: confirm_payment.html  (+1 more)
cryptotax/wallet_analysis/templates/wallet_analysis/: create_order.html  dashboard.html  order_detail.html  payment.html  payment_simple.html  verify_signature.html
docs/: solana-pay-integration.md  v1-wallet-analysis-feature.md
frontend/: README.md  build.js  package.json
frontend/src/: solana-payment.js
(+1 files in other folders)
